<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_cont" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/button_back" />

    <TextView
        android:id="@+id/receive_text"
        android:textSize="26dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText 
        android:id="@+id/modify"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        
        />
        <Button
        android:id="@+id/btn_modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_modify" />

</LinearLayout>